Client - Main Page - Part1 : markup, install bulma, login/signup, JWT stores in redux state

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -30,3 +30,8 @@
     transform: rotate(360deg);
   }
 }
+
+.hero-body {
+  background-image: url('https://images.pexels.com/photos/163403/box-sport-men-training-163403.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');
+  background-position: center;
+}
