[Client] Combat Match Page

--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -8,3 +8,11 @@
   flex-direction: column;
   justify-content: center;
 }
+
+.modal-section {
+  display: none;
+}
+
+.is-active {
+  display: block;
+}
