--- a/src/index.scss
+++ b/src/index.scss
@@ -16,3 +16,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.columns {
+  margin-left: 0;
+  margin-right: 0;
+}
+
