--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,9 @@
 $navbar-background-color: #070707;
+$gap: 100px;
+
+$text: hsl(0, 0%, 98%);
+$background: #070707;
+$body-background-color: #070707;
 
 @import 'bulma';
 
