--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -5,7 +5,7 @@
 .navbar-end {
   display: inline-flex;
   align-items: center;
-  padding: 0 2em;
+  padding: 0;
   & .button {
     padding: 0 1em;
     margin-right: 2vw;
