--- a/src/components/UserSolutionList/UserSolutionList.scss
+++ b/src/components/UserSolutionList/UserSolutionList.scss
@@ -1,19 +1,26 @@
-.solution {
+.solution-box {
+  border: 1px solid hsl(217, 71%, 53%);
   .entry {
-    .title {
+    .entry-header{
+      margin-bottom: 0;
+      .column {
+        padding-bottom: 0;
+      }
+    }
+    .entry-title {
+      margin-bottom: 0;
       .created-at {
         text-align: left;
       }
       .code {
       }
     }
-    .entry-title {
-
-    }
     .entry-content {
       height: 0;
       .CodeMirror {
         height: 0;
+      }
+      .created-at p {
       }
     }
 
@@ -21,6 +28,8 @@
       height: auto;
       .CodeMirror {
         height: 500px;
+      }
+      .created-at p {
       }
     }
   }
