[Client] User Account Page - style

--- a/src/index.scss
+++ b/src/index.scss
@@ -14,6 +14,7 @@ $modal-card-head-background-color: hsl(0, 0%, 20%);
 $modal-card-head-border-bottom: hsl(0, 0%, 20%);
 $modal-card-body-background-color: hsl(0, 0%, 20%);
 $modal-card-foot-border-top: hsl(0, 0%, 20%);
+$modal-card-title-color: hsl(0, 0%, 98%);
 
 // $link: hsl(0, 0%, 96%);
 $link: hsl(348, 100%, 61%);
