--- a/src/components/CombatMatch/CombatMatch.scss
+++ b/src/components/CombatMatch/CombatMatch.scss
@@ -1,60 +1,120 @@
 .CodeMirror {
   height: 550px;
   text-align: left;
+  margin-bottom: 20px;
+}
+
+.user-profile-image.combat-match-user-status {
+  vertical-align: middle;
+  position: absolute;
+  z-index: -1;
+  right: 1.6rem;
+}
+
+.user-profile-image.combat-match-user-status.partner {
+  // vertical-align: middle;
+  position: absolute;
+  left: 0.8rem;
+}
+
+.clock {
+  -webkit-animation: clockMove infinite 5s linear;
+  -moz-animation: clockMove infinite 5s linear;
+  animation: clockMove infinite 5s linear;
+}
+
+@keyframes clockMove {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+progress.progress.is-small {
+  margin-bottom: 0;
+  border-radius: 1px;
+}
+
+.markdown {
+  text-align: justify;
+}
+
+.user-status-box {
+  display: flex;
+  flex-direction: column;
 }
 
 .user-status-box:first-child {
   text-align: left;
+  position: relative;
 }
 
 .user-status-box:last-child {
   text-align: right;
 }
 
-.user-status-box .user-email {
+.user-status-box .user-username {
   margin-bottom: 0;
   display: inline-block;
-  vertical-align: middle;
+  text-align: center;
+  border-radius: 2px;
 }
 
-.user-profile {
-  display: inline-block;
-  vertical-align: middle;
+.button.user-username {
+  pointer-events: none;
 }
 
 .user-gauge {
-  background-color: white;
+  transform: rotate(180deg);
+  // position: absolute;
+  // background-color: white;
 }
 
-.blinking{
-  -webkit-animation: blink 1.5s ease-in-out infinite alternate;
-  -moz-animation: blink 1.5s ease-in-out infinite alternate;
-  animation: blink 1.5s ease-in-out infinite alternate;
+.user-gauge-percent {
+  color: hsl(348, 100%, 61%);
 }
-@-webkit-keyframes blink{
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-    text-shadow: -1px 1px 5px #03c, 1px -1px 5px #03c;
+
+.partner-gauge-percent {
+  color: hsl(204, 86%, 53%);
+}
+
+div#wave {
+  position: absolute;
+  right: -4px;
+  bottom: -40px;
+  // margin-top:50vh;
+  // text-align:center;
+  // width:100px;
+  // height:100px;
+  // margin-left: auto;
+  // margin-right: auto;
+  .dot {
+    display:inline-block;
+    width:12px;
+    height:12px;
+    border-radius:50%;
+    margin-right:3px;
+    background:hsl(204, 86%, 53%);
+    animation: wave 1.3s linear infinite;
+
+    &:nth-child(2) {
+      animation-delay: -1.1s;
+    }
+
+    &:nth-child(3) {
+      animation-delay: -0.9s;
+    }
   }
 }
-@-moz-keyframes blink{
-  0% {
-    opacity: 0;
+
+@keyframes wave {
+  0%, 60%, 100% {
+    transform: initial;
   }
-  100% {
-    opacity: 1;
-    text-shadow: -1px 1px 5px #03c, 1px -1px 5px #03c;
-  }
-}
-@keyframes blink{
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-    text-shadow: -1px 1px 5px #03c, 1px -1px 5px #03c;
+
+  30% {
+    transform: translateY(-15px);
   }
 }
