--- a/src/index.scss
+++ b/src/index.scss
@@ -20,12 +20,13 @@ $modal-card-title-color: hsl(0, 0%, 98%);
 $link: hsl(348, 100%, 61%);
 $border-hover: white;
 
+// @import './components/CombatMatch/github.css';
 @import 'bulma';
 @import '~bulma-timeline';
 
 body {
-  margin: 0;
-  padding: 0;
+  padding: 0 20px 0 20px;
+  margin: 0 -20px -30px -20px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
