--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -11,3 +11,11 @@
     margin-right: 2vw;
   }
 }
+.nav-bar-menus {
+  position: absolute;
+  right: 0;
+}
+
+.logo-image {
+  padding-left: 1rem;
+}
