--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -11,7 +11,7 @@
     overflow: hidden;
     padding-top: 10rem;
     padding-bottom: 24rem;
-    background-image: url('https://images.pexels.com/photos/163403/box-sport-men-training-163403.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');
+    background-image: url("https://images.pexels.com/photos/163403/box-sport-men-training-163403.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
     background-position: center top;
   }
 }
@@ -28,5 +28,3 @@
   font-size: 1.3rem;
   margin-bottom: 3.4rem;
 }
-
-
